--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <main>
-        <nav>
+        <nav class="container">
             <figure>
                 <img src="assets/images/logo.png" alt="">
             </figure>
@@ -21,13 +21,27 @@
                 <input type="text" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <ul>
+            <ul class="nav-items">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
+        <!-- Banner-->
+         <section class="banner container">
+            <!--Banner Laft -->
+            <div>
+                <h2>Mi LED TV 4A PRO 32</h2>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <samp class="banner-price">$1289</samp> <br>
+                <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <!--Banner Right -->
+            <img src="assets/images/banner-images/tv.png" alt="">
+         </section>
     </main>
 </body>
 </html>
