--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
+    <!-- goole font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Font awesome CDN-->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -42,6 +46,25 @@
             <!--Banner Right -->
             <img src="assets/images/banner-images/tv.png" alt="">
          </section>
+
+         <!-- Categores section -->
+          <section class="categores container">
+            <h2>Categories</h2>
+            <div class="categories-card-section">
+                <div class="categories-card categories-card-1">
+                    <h3>Watch</h3>
+                    <img src="assets/images/categories/watch.png" alt="">
+                </div>
+                <div class="categories-card categories-card-2">
+                    <h3>Bag</h3>
+                    <img src="assets/images/categories/bag.png" alt="">
+                </div>
+                <div class="categories-card categories-card-3">
+                    <h3>Shoes</h3>
+                    <img src="assets/images/categories/shoes.png" alt="">
+                </div>
+            </div>
+          </section>
     </main>
 </body>
 </html>
