--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
          <!-- Categores section -->
           <section class="categores container">
-            <h2>Categories</h2>
+            <h2 class="common-section-title">Categories</h2>
             <div class="categories-card-section">
                 <div class="categories-card categories-card-1">
                     <h3>Watch</h3>
@@ -65,6 +65,83 @@
                 </div>
             </div>
           </section>
+
+
+
+          <!-- Shoes and backpack section -->
+           <!-- shoes -->
+           <section class="shoes-section">
+            <div class="shoes-backpack-section-title-parent container">
+                <h2>Shoes </h2>
+                <p>See All</p>
+            </div>
+            <div class="shoe-card-container container">
+                <div class="shoes-card">
+                    <img src="assets/images/shoes/shoe-1.png" alt="">
+                    <h2>Reebok Dart Men’s Shoes</h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    </p>
+                    <samp class="card-peice">$1289</samp>
+                    <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="shoes-card">
+                    <img src="assets/images/shoes/shoe-2.png" alt="">
+                    <h2>Reebok Pump</h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    </p>
+                    <samp class="card-peice">$799  </samp>
+                    <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="shoes-card">
+                    <img src="assets/images/shoes/shoe-3.png" alt="">
+                    <h2>Reebok All Terrain</h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                    </p>
+                    <samp class="card-peice">$699</samp>
+                    <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+            <!-- backpack  -->
+             <div class="backpack-A">
+
+                 <div class="shoes-backpack-section-title-parent container">
+                     <h2>Backpack </h2>
+                     <p>See All</p>
+                    </div>
+                    <div class="shoe-card-container container">
+                        <div class="shoes-card">
+                            <img src="assets/images/bags/bag-1.png" alt="">
+                            <h2>Ison Backpack</h2>
+                            <p>
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                            </p>
+                            <samp class="card-peice">$1289</samp>
+                            <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                        <div class="shoes-card">
+                            <img src="assets/images/bags/bag-2.png" alt="">
+                            <h2>Biaowang Backpackv</h2>
+                            <p>
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                            </p>
+                            <samp class="card-peice">$799  </samp>
+                            <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                        <div class="shoes-card">
+                            <img src="assets/images/bags/bag-3.png" alt="">
+                            <h2>Biaowang Backpack</h2>
+                            <p>
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                            </p>
+                            <samp class="card-peice">$699</samp>
+                            <button class="Panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+           </section>
     </main>
 </body>
 </html>
