add contact section

--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
                     </div>
                 </div>
            </section>
+
+           <!-- Contact Us section -->
+            <section class="contact-us-parent contact container">
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales specials and more</p>
+                <div class="contact-input-btn-parent">
+                    <input type="text" placeholder="Enter your email">
+                    <button class="Panda-btn">Send </button>
+                </div>
+            </section>
     </main>
 </body>
 </html>
